--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.11.5",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.20.0",
+    "react-router-guard": "^2.3.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
