--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^2.2.2",
     "antd": "^5.11.5",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "moment": "^2.30.1",
     "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,6 +22,7 @@
     "react-router-dom": "^6.20.0",
     "react-router-guard": "^2.3.1",
     "react-slick": "^0.29.0",
+    "recharts": "^2.10.3",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
